Feature/modify dto (#1)
* DTO修正

* テストコード修正
DB修正